[gd_scene load_steps=6 format=3 uid="uid://c5g5bpjgqf3f7"]

[ext_resource type="Texture2D" uid="uid://cv8lwnqvxifr8" path="res://sprites/blank_card.svg" id="1_eebi7"]
[ext_resource type="Script" path="res://scenes/menu/menu.gd" id="1_f2un7"]
[ext_resource type="Texture2D" uid="uid://d0iur3ixjxjly" path="res://sprites/import.svg" id="2_34vtk"]
[ext_resource type="Texture2D" uid="uid://kjuxqq3gqcem" path="res://sprites/plus.svg" id="2_y4wfd"]
[ext_resource type="Texture2D" uid="uid://cstv5jgdvyibg" path="res://sprites/export.svg" id="3_2ynxl"]

[node name="Menu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1_f2un7")

[node name="Container" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LeftContainer" type="ScrollContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="Container" type="VBoxContainer" parent="Container/LeftContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LineEdit" type="LineEdit" parent="Container/LeftContainer/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Options" type="VBoxContainer" parent="Container/LeftContainer/Container"]
layout_mode = 2
size_flags_vertical = 3

[node name="Container" type="MarginContainer" parent="Container/LeftContainer/Container"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Container" type="HBoxContainer" parent="Container/LeftContainer/Container/Container"]
layout_mode = 2

[node name="Import" type="Button" parent="Container/LeftContainer/Container/Container/Container"]
layout_mode = 2
icon = ExtResource("2_34vtk")
flat = true

[node name="FileDialog" type="FileDialog" parent="Container/LeftContainer/Container/Container/Container/Import"]
title = "Open a File"
size = Vector2i(392, 159)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="Export" type="Button" parent="Container/LeftContainer/Container/Container/Container"]
layout_mode = 2
icon = ExtResource("3_2ynxl")
flat = true

[node name="FileDialog" type="FileDialog" parent="Container/LeftContainer/Container/Container/Container/Export"]
access = 2
filters = PackedStringArray("*.zip")

[node name="Add" type="Button" parent="Container/LeftContainer/Container/Container/Container"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
icon = ExtResource("2_y4wfd")
flat = true

[node name="Window" type="Window" parent="Container/LeftContainer/Container/Container/Container/Add"]
title = "Deck creation"
position = Vector2i(0, 36)
visible = false
unresizable = true

[node name="Container" type="MarginContainer" parent="Container/LeftContainer/Container/Container/Container/Add/Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Container" type="VBoxContainer" parent="Container/LeftContainer/Container/Container/Container/Add/Window/Container"]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="Container/LeftContainer/Container/Container/Container/Add/Window/Container/Container"]
layout_mode = 2

[node name="Label" type="Label" parent="Container/LeftContainer/Container/Container/Container/Add/Window/Container/Container/Container"]
layout_mode = 2
text = "Subject:"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="Container/LeftContainer/Container/Container/Container/Add/Window/Container/Container/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Container/LeftContainer/Container/Container/Container/Add/Window/Container/Container"]
layout_mode = 2
size_flags_vertical = 4
text = "Create"

[node name="RightContainer" type="MarginContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="Container/RightContainer"]
layout_mode = 2
texture = ExtResource("1_eebi7")
stretch_mode = 3

[connection signal="text_changed" from="Container/LeftContainer/Container/LineEdit" to="." method="_refresh_options"]
[connection signal="pressed" from="Container/LeftContainer/Container/Container/Container/Import" to="." method="_import_decks"]
[connection signal="pressed" from="Container/LeftContainer/Container/Container/Container/Export" to="." method="_export_decks"]
[connection signal="pressed" from="Container/LeftContainer/Container/Container/Container/Add" to="." method="_open_new_deck_window"]
[connection signal="close_requested" from="Container/LeftContainer/Container/Container/Container/Add/Window" to="Container/LeftContainer/Container/Container/Container/Add/Window" method="hide"]
[connection signal="close_requested" from="Container/LeftContainer/Container/Container/Container/Add/Window" to="Container/LeftContainer/Container/Container/Container/Add/Window/Container/Container/Container/LineEdit" method="clear"]
[connection signal="pressed" from="Container/LeftContainer/Container/Container/Container/Add/Window/Container/Container/Button" to="." method="_add_deck"]
